--- a/Speech/speech.tex
+++ b/Speech/speech.tex
@@ -28,8 +28,9 @@
 \setmonofont{CMU Typewriter Text}
 \setmathfont{Latin Modern Math}
 
+\newcounter{FrameNum}
 \newcommand{\redtext}[1]{{\color{red} #1}}
-\newcommand{\note}[1]{\noindent\rule{\textwidth}{.2pt}\marginpar{\redtext{#1}}
+\newcommand{\note}[1]{\noindent\rule{\textwidth}{.2pt}\marginpar{\redtext{Слайд \stepcounter{FrameNum}\arabic{FrameNum}\\#1}}
 
 }
 
@@ -41,38 +42,66 @@
 
 \maketitle
 
-\note{Слайд 1}
+\note{}
 Добрый день, я Тимофей Проданов и я буду рассказывать об адаптивном выделении сообществ в графах.
 
-\note{Слайд 2:\\Выделение\\ сообществ}
-Последние двадцать лет развивается изучение сложных сетей, то есть графов с неправильной, сложной структурой. Сложные сети были с успехом применены в различных областях, например в биоинформатике и социологии. Сложные сети, построенные по реальным системам, часто разбиваются на группы тесно связанных узлов графа, сообщества. Способность находить и анализировать подобные группы узлов даёт большие возможности в изучении реальных систем, например, сообщества в интернете представляют распространённые темы. Поиск таких групп узлов в называют выделением сообществ или кластеризацией.
+Последние двадцать лет развивается изучение сложных сетей, то есть графов с неправильной, сложной структурой. Сложные сети были с успехом применены в различных областях, например в биоинформатике и социологии. Такие сети, построенные по реальным системам, часто разбиваются на группы тесно связанных узлов графа, сообщества. Способность находить и анализировать подобные группы узлов даёт большие возможности в изучении реальных систем, например, сообщества в интернете представляют распространённые темы.
 
-В 2004 году Марк Ньюман представил целевую функцию модулярность, показывающую качество разбиения графа на сообщества, определение модулярности изображено на слайде. Модулярность удобна в использовании, так как подсчёт выигрыша от объединения двух сообществ занимает одну операцию, а объединение двух сообществ --- $О$ от количества соседей одного из сообществ. Таким образом, задачу выделения сообществ рассматривают как задачу максимизации модулярности.
+\note{Блондель}
+Винсент Блондель в 2008 году разбил на сообщества два миллиона абонентов бельгийской телефонной компании. На рисунке размер круга отвечает за размер сообщества, а цвет за основной язык --- французский или голландский. Заметно, как зелёные и красные сообщества распределелись по разным сторонам сети, а в центральных сообществах цвета оказались смешанными.
 
-\note{Слайд 3:\\Алгоритмы выделения сообществ}
+\note{Выделение сообществ}
+Было показано, что сложные сети, построенные по реальным системам часто имеют характеристики, усложняющие анализ классической теорией графов или статистический анализ. В 2004 году Марк Ньюман представил целевую функцию модулярность, показывающую качество разбиения графа на сообщества. Модулярность удобна в использовании, так как подсчёт выигрыша от объединения двух сообществ занимает одну операцию, а объединение двух сообществ --- $О$ от количества соседей одного из сообществ. Таким образом, задачу выделения сообществ рассматривают как задачу максимизации модулярности.
+
+\note{Алгоритмы выделения сообществ}
 Эффективными оказались рандомизированные алгоритмы выделения сообществ в графах. В 2010 году Овельгённе и Гейер-Шульц предложили рандомизированный жадный алгоритм выделения сообществ с параметром $k$. На каждой итерации рассматривается $k$ случайных сообществ, у каждого сообщества исследуются соседи, и затем соединяется лучшая пара.
 
-В 2012 году те же учёные представили схему кластеризации основных группа графа. Сначала $s$ начальных алгоритмов выделяют сообщества, а те узлы, которые начальные алгоритмы назначили в разные сообщества, распределяет по сообществам финальный алгоритм. В итеративной схеме узлы, относительно которых начальные алгоритмы не сошлись во мнении, снова распределяют по сообществам начальные алгоритмы.
+В 2012 году те же учёные победили на конкурсе DIMACS со схемой кластеризации основных группа графа. Сначала $s$ начальных алгоритмов выделяют сообщества, а те узлы, которые начальные алгоритмы назначили в разные сообщества, распределяет по сообществам финальный алгоритм. В итеративной схеме узлы, относительно которых начальные алгоритмы не сошлись во мнении, снова распределяют по сообществам начальные алгоритмы.
 
 В качестве начальных и финального алгоритмов можно использовать рандомизированный жадный алгоритм с разными параметрами.
 
-\note{Слайд 4:\\\emph{SPSA}.\\ Постановка задачи}
-Качество работы этих алгоритмов критично зависит от их параметров, и остаётся открытым вопрос об адаптивных версиях алгоритмов, которые были бы работоспособны на большем количестве задач.
+\note{\emph{SPSA}.\\ Постановка задачи}
+Однако не существует набора параметров, при хоторых эти алгоритмы хорошо выделяют сообщества в каждом графе, и остаётся открытым вопрос об  версиях алгоритмов, которые были бы работоспособны на большем количестве задач.
 
-Для создания таких модификаций используется стохастическая аппроксимация. Алгоритм одновременно возмущаемой стохастической аппроксимации, или по другому \emph{SPSA}, предполагает разбиение улучшаемого алгоритма на два $n$ шагов. В течении нечётного шага улучшаемый алгоритм использует один параметр, а во время чётного --- другой, после чего вычисляются следующие два значения параметра.
+Для создания таких модификаций используется стохастический градиентный спуск. Алгоритм \emph{SPSA} предполагает разбиение улучшаемого алгоритма на два $n$ шагов. В течении нечётного шага улучшаемый алгоритм использует один параметр, а во время чётного --- другой, после чего подбираются следующие два значения параметра.
 
-В работе рассматривается применение алгоритма \emph{SPSA} к двум рандомизированным алгоритмам выделения сообществ для получения модификаций, способных хорошо работать на большем количестве входных графов.
+В работе рассматривается применение \emph{SPSA} к двум рандомизированным алгоритмам выделения сообществ для получения модификаций, способных хорошо работать на большем количестве входных графов.
 
-\note{Слайд 5:\\Применимость \emph{SPSA}.\\ Функция качества}
-Применимость \emph{SPSA} обоснована теоретически для выпуклой в среднем функции качества.
+\note{Адаптивный рандомизированный жадный алгоритм}
+Предлагается адаптиный рандомизированный жадный алгоритм или $ARG$, почти идентичный рандомизированному жадному алгоритму с параметром $k$. Однако действие $ARG$ разбито на шаги длиной в $\sigma$ итераций, после окончания шага параметр $k$ меняется.
 
-На слайде изображена медианная модулярность разбиений алгоритмом $RG$ двух графов при разных значениях параметра $k$. На каждом графе модулярность либо достигает максимума при небольшом $k$, либо постоянно увеличивается при росте $k$. Однако время работы линейно зависит от $k$, поэтому предлагается функция качества, зависящая и от модулярности, и от параметра $k$, она показана на слайде. Такая функция в среднем выпуклая и подходит для работы \emph{SPSA}.
+Для получения следующих двух параметров $k$ некоторая текущая оценка параметра возмущается в обе стороны. Следующая оценка будет ближе к тому возмущению, которое дало лучшие результаты. [Оценка результата зависит от $k$ и от медианы прироста модулярности за $\sigma$ шагов.]
 
-\note{Слайд 6:\\Адаптивный рандомизированный жадный алгоритм}
-Предлагается адаптиный рандомизированный жадный алгоритм или $ARG$, построенный на основе $RG$. Алгоритм идентичен рандомизированному жадному алгоритму с параметром в $k$. Однако действие $ARG$ разбито на шаги длиной в $\sigma$ итераций, после окончания шага параметр $k$ меняется.
+\note{Параметры $ARG$}
+В отличии от $RG$, имевшего один параметр, $ARG$ имеет пять параметров, однако от чувствительности и количества итераций в шаге результат зависит слабо, а размер возмущения и начальная оценка имеет значения, дающие хороший результат на всех графах. Существует параметр, отвечающий за значимость времени, при его увеличении время работы уменьшается, однако при уменьшении модулярности.
 
-В функции качества используется медиана прироста модулярности за последние $\sigma$ шагов. Использовать прирост модулярности опасно, так как алгоритм рандомизированный и даже при плохом $k$ иногда модулярность будет сильно возрастать.
+\note{Сравнение $RG$ и $ARG$}
+Для сравнения качества рандомизированного жадного алгоритма и его адаптивной версии сопоставлялась медианная модулярность рзбиений. На тепловой карте изображены модулярности разбиений графов с конкурса DIMACS. Левее пунктирной линии указаны $RG$ с разными параметрами, правее --- $ARG$ с разными параметрами. Чем более зелёный цвет --- тем разбиение лучше, и чем краснее --- тем хуже. Видно, что $RG$ даёт плохие результаты чаще, чем $ARG$. [$RG_{10}$]
 
-Для получения следующих двух параметров $k$ некоторая текущая оценка параметра возмущается в обе стороны. Следующая оценка будет ближе к тому возмущению, которое дало меньшее значение функции качества, формула вычисления изображена на слайде.
+\note{Применение $ARG$ в $CGGC$}
+Первым этапом $CGGC$ $s$ начальных алгоритмов выделяют сообщества. Если начальный алгоритм даёт плохие разбиения, то и результат всей схемы будет плохим. Однако по значению модулярности невозможно сказать, относительно хорошее это разбиение или относительно плохое.
+
+Поэтому имеет смысл использовать $ARG$ вместо $RG$ в качестве начального алгоритма, ведь нестабильные начальные алгоритмы портят финальное разбиение.
+
+На таблице изображены результаты $CGGC$, в верхней строке указаны начальные алгоритмы, во второй --- финальные, а слева --- три тестовых графа. Золотым цветом отмечены лучшие результаты, серебрянным --- вторые по модулярности, а красным --- очень плохие. Видно, что в последних трёх столбцах с начальным алгоритмом $ARG$ показаны более хорошие значения, и ни разу не появляются очень плохие.
+
+\note{$ACGGC$}
+Представляется адаптивная схема кластеризации основных групп графа, схожая с неадаптивной схемой, но на первом этапе в качестве начальных алгоритмов используется $RG$ с подстраивающимися параметрами.
+
+Затем в создании промежуточного разбиения участвуют не все начальные разбиения, но только некоторое количество лучших.
+
+\note{Параметры $ACGGC$}
+$ACGGC$ имеет несколько параметров: размер возмущения, чувствительность, начальную оценку, долю хороших параметров и количество шагов. Однако можно подобрать набор параметров, достаточно хорошо работающих на всех тестовых графах.
+
+\note{Снижение времени работы}
+Предложено два механизма снижения времени работы. Первый из них заключается в возможности увеличения параметра значимости времени, уменьшая время и модулярность. Второй механизм устанавливает ограничение на максимальную оценку параметра $k$, этот вариант более стабилен и часто даже улучшает результаты при уменьшении времени работы. Снизу изображены две тепловые карты для второго механизма, слева --- модулярность при уменьшении максимальной оценки слева направо, а справа --- время при уменьшении параметра.
+
+\note{Сравнение $ACGGC$ и $CGGC$}
+На таблице слева указаны тестовые графы с конкурса DIMACS, от 34 до полутора миллионов узлов. Два первых столбца представляют результаты $ACGGC$ с разными параметрами, а следующие три --- результаты $CGGC$ с разными параметрами. Золотым отмечены лучшие результаты, серебрянным --- вторые по модулярности и красным --- очень плохие результаты.
+
+$ACGGC$ даёт лучше и более стабильные значения.
+
+\note{Сравнение $ACGGCi$ и $CGGCi$}
+Как и $CGGC$, $ACGGC$ можно итерировать. На таблице изображены результаты итерационных схем, слева направо дважды $ACGGCi$ с разными парамететрами, $CGGCi$ и комбинированный из двух алгоритмов вариант в последнем столбце.
 
 \end{document}
