--- a/Presentation/ps/p2.tex
+++ b/Presentation/ps/p2.tex
@@ -1,67 +1,164 @@
 \begin{frame}
-	\frametitle{Сравнение \emph{CGGC} и \emph{ACGGC}}
-	\scriptsize
-	\begin{table}[H]
-		\caption{Модулярность разбиений, полученных \emph{ACGGC} и \emph{CGGC} на тестовых графах}
-		\begin{tabularx}{\textwidth}{lrrrrr} \hline
-					& $ACGGC^{I}$ & $ACGGC^{II}$ & $CGGC_{10}^{10}$	& $CGGC_{3}^{10}$ & $CGGC_{10}^{3}$ \\ \hline
-		karate 			& \csilver 0.417242 	& \cgold 0.417406 	& 0.415598 	& 0.396532	& 0.405243	\\
-		dolphins		& \cgold{0.524109}	& \csilver{0.523338}	& 0.521399	& 0.523338	& 0.522428	\\
-		chesapeake		& \csilver{0.262439}	& \csilver{0.262439}	& \csilver{0.262439}	& \csilver{0.262439}	& 0.262370	\\
-		adjnoun			& \cgold{0.299704}	& \csilver{0.299197}	& 0.295015	& 0.292703	& 0.290638	\\
-		polbooks		& \csilver{0.527237}	& \csilver{0.527237}	& \csilver{0.527237}	& 0.526938	& 0.526784	\\
-		football		& 0.603324	& \csilver{0.604266}	& \csilver{0.604266}	& 0.599537	& 0.599026	\\
-		celegans 		& \cgold{0.439604}	& \csilver{0.438584} 	& 0.435819	& 0.436066	& 0.432261	\\
-		jazz			& 0.444739	& \csilver{0.444848}	& \cgold{0.444871} 	& 0.444206 	& 0.444206	\\
-		netscience		& \cgold{0.907229}	& \csilver{0.835267}	& \cred 0.724015 	& \cred 0.708812 	& \cred 0.331957	\\
-		email			& \csilver{0.573333}	& \cgold{0.573409}	& 0.571018 	& 0.572667 	& 0.567423	\\
-		polblogs		& \cgold{0.424107} 	& \csilver{0.423208}	& 0.422901 	& 0.421361 	& 0.390395	\\
-		pgpGiantCompo	& \cgold{0.883115} 	& \csilver{0.883085}	& 0.882237 	& 0.882532	& 0.880340	\\
-		as-22july06		& \cgold{0.671249}	& \csilver{0.670677}	& 0.666766	& 0.669847	& 0.665260	\\
-		cond-mat-2003	& 0.744533 	& \csilver{0.750367}	& \cgold{0.751109} 	& \cred 0.708775	& \cred 0.413719	\\
-		caidaRouterLevel& 0.846312	& \csilver{0.855651}	& 0.851622 	& \cgold{0.858955} 	& 0.843835	\\
-		cnr-2000		& 0.912762 	& \cgold{0.912783}	& 0.912500 	& \csilver{0.912777}	& 0.912496	\\
-		eu-2005			& \cgold{0.938292}  & \csilver{0.936984}	& 0.935510 	& 0.936515	& 0.936420	\\
-		in-2004			& \csilver{0.979844}	& 0.979771	& \cgold{0.979883}	& 			& 			\\
-		\hline
-		\end{tabularx}
-	\end{table}
-\end{frame}
+	\frametitle{Адаптивный рандомизированный жадный алгоритм}
 
-\begin{frame}
-	\frametitle{Сравнение \emph{CGGCi} и \emph{ACGGCi}}
-	\begin{table}[H]
-	\caption{Модулярность работы четырёх итеративных алгоритмов на небольших тестовых графах}
-	\begin{tabularx}{\textwidth}{Xrrrr} \hline
-					& $ACGGCi^{I}$ & $ACGGCi^{II}$ & $CGGCi$	& combined \\ \hline
-	karate			& 0.417242	& \cgold{0.417406}	& 0.417242	& 0.417242	\\
-	dolphins		& 0.525869	& 0.525869	& 0.525869	& 0.525869	\\
-	chesapeake		& 0.262439	& 0.262439	& 0.262439	& 0.262439	\\
-	adjnoun			& 0.303731	& 0.303504	& 0.303571	& \cgold{0.303970}	\\
-	polbooks		& 0.527237	& 0.527237	& 0.527237	& 0.527237	\\
-	football		& 0.604266	& 0.604407	& \cgold{0.604429}	& 0.604407	\\
-	celegans 		& 0.446964	& 0.446836	& 0.445442	& \cgold{0.447234}	\\
-	jazz			& 0.444871	& 0.444871	& 0.444871	& 0.444871	\\
-	netscience		& \cgold{0.908845}	& 0.888422	& \cred 0.725781	& 0.907443	\\
-	email			& 0.576778	& 0.577000	& 0.576749	& \cgold{0.577110}	\\
-	polblogs		& \cgold{0.424025}	& 0.422920	& 0.423281	& 0.423996	\\
-	\hline
-	\end{tabularx}
-\end{table}
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Заключение}
-
-	В рамках работы
+	Адапивный рандомизированный жадный алгоритм $ARG$:
 	\begin{itemize}
-		\item Проанализированы современные методы выделения сообществ
-		\item Предложен алгоритм $ARG$, дающий более стабильные результаты, чем $RG$
-		\item Описано возможное применение $ARG$
-		\item Представлены схемы $ACGGC$ и $ACGGCi$, показывающие более хорошие и стабильные результаты, чем $CGGC$ и $CGGCi$
-		\item Описан механизм снижения времени работы $ACGGC$
+		\item Шаги по $\sigma$ итераций
+		\item После окончания шага $k$ меняется
+		\item Функция качества $f(\mu, k) = -\alpha (\ln \mu_n^{-} - \beta \ln k_n^{-}),$\\ $\mu$ --- медиана прироста модулярности
+		\item $\hat{k}_{n - 1}$ --- текущая оценка, её возмущение:\\
+		$k_{n}^{-} = \max\{\hat{k}_{n - 1} - d, 1\}$ и $k_{n}^{+} = \hat{k}_{n - 1} + d$
+		\item Следующая оценка:
+		$$\hat{k}_n \leftarrow \max\left\{1, \left[\hat{k}_{n - 1} - \frac{f_n^{+} - f_n^{-}}{k_n^{+} - k_n^{-}}\right]\right\}$$
 	\end{itemize}
+\end{frame}
 
-	\vspace{2em}\centeringВопросы?
+
+\begin{frame}
+	\frametitle{Параметры \emph{ARG}}
+	\small
+	$ARG$ имеет пять параметров:
+
+	\begin{multicols}{2}
+	\bluetext{\textbullet} $\alpha > 0 \in \mathbb{R}$ \vspace{-0.8em}
+	\begin{figure}[H]
+		\begin{tikzpicture}
+			\begin{axis}[
+			    table/col sep = semicolon,
+			    height = 0.3\paperheight, 
+			    width = 0.9\columnwidth,
+			    xlabel = {$\alpha$},
+			    ylabel = {$Q$},
+			    legend style = {
+			    	cells = {anchor = west},
+			    	legend pos = outer north east
+			    },
+			    x label style={at={(axis description cs:.3,-.6)}, anchor=south},
+			    no marks,
+			]
+			\addplot table [x={alpha}, y={q}]{../Text/data/arg/alpha/caida/caida_alpha.csv};
+			\end{axis}
+		\end{tikzpicture}
+	\end{figure}
+
+	\vspace{-2em} \bluetext{\textbullet} $d \in \mathbb{N}$ \vspace{-0.8em}
+	\begin{figure}[H]
+		\begin{tikzpicture}
+			\begin{axis}[
+			    table/col sep = semicolon,
+			    height = 0.3\paperheight, 
+			    width = 0.9\columnwidth,
+			    xlabel = {$d$},
+			    ylabel = {$Q$},
+			    legend pos = north east,
+			    no marks,
+			    %y label style={at={(axis description cs:-0.4,.5)}, anchor=south},
+			    x label style={at={(axis description cs:.3,-.6)}, anchor=south},
+			]
+			\addplot table [x={d}, y={q}]{../Text/data/arg/d/cond_d.csv};
+			\end{axis}
+		\end{tikzpicture}
+	\end{figure}
+
+	\vspace{-2em} \bluetext{\textbullet} $\sigma \in \mathbb{N}$ \vspace{-0.8em}
+	\begin{figure}[H]
+		\begin{tikzpicture}
+			\begin{axis}[
+			    table/col sep = semicolon,
+			    height = 0.3\paperheight, 
+			    width = 0.9\columnwidth,
+			    xlabel = {$\sigma$},
+			    ylabel = {$Q$},
+			    legend pos = north east,
+			    no marks,
+			    x label style={at={(axis description cs:.3,-.6)}, anchor=south},
+			]
+			\addplot table [x={sigma}, y={q}]{../Text/data/arg/sigma/cond_sigma.csv};
+			\end{axis}
+		\end{tikzpicture}
+	\end{figure}
+
+	\newpage \bluetext{\textbullet} $\hat{k}_0 \in \mathbb{N}$ \vspace{-0.8em}
+	\begin{figure}[H]
+		\begin{tikzpicture}
+			\begin{axis}[
+			    table/col sep = semicolon,
+			    height = 0.3\paperheight, 
+			    width = 0.9\columnwidth,
+			    xlabel = {$\hat{k}_0$},
+			    ylabel = {$Q$},
+			    legend pos = north east,
+			    no marks,
+			    x label style={at={(axis description cs:.45,-.6)}, anchor=south},
+			]
+			\addplot table [x={k0}, y={q}]{../Text/data/arg/k0/cond_k0.csv};
+			\end{axis}
+		\end{tikzpicture}
+	\end{figure}
+
+	\vspace{-2em} \bluetext{\textbullet} $\beta \ge 0 \in \mathbb{R}$ \vspace{-0.8em}
+	\begin{figure}[H]
+		\begin{tikzpicture}
+			\begin{axis}[
+			    table/col sep = semicolon,
+			    height = 0.3\paperheight, 
+			    width = 0.9\columnwidth,
+			    xlabel = {$\beta$},
+			    ylabel = {$Q$},
+			    legend pos = north east,
+			    no marks,
+			    x label style={at={(axis description cs:.6,-.6)}, anchor=south},
+			]
+			\addplot table [x={beta}, y={q}]{../Text/data/arg/beta/cond_beta.csv};
+			\end{axis}
+		\end{tikzpicture}
+		\begin{tikzpicture}
+			\begin{axis}[
+			    table/col sep = semicolon,
+			    height = 0.3\paperheight, 
+			    width = 0.9\columnwidth,
+			    xlabel = {$\beta$},
+			    ylabel = {$t$},
+			    legend pos = north east,
+			    no marks,
+			    x label style={at={(axis description cs:.6,-.6)}, anchor=south},
+			]
+			\addplot[red] table [x={beta}, y={time}]{../Text/data/arg/beta/cond_beta.csv};
+			\end{axis}
+		\end{tikzpicture}
+	\end{figure}\vspace{-1.5em}~
+	\end{multicols}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Сравнение \emph{RG} и \emph{ARG}}
+
+	\begin{figure}[H]
+		\begin{tikzpicture}	% max(0, 1 + (rgs1[y, x] - max(rgs1[y, ]))/(.04 * max(rgs1[y, ])))
+			\begin{axis}[
+				view={0}{90},
+				width = 0.7\columnwidth,
+				% grid=minor,
+	 		    % grid style={dotted},
+			    colormap = {redgreen}{rgb255(0cm)=(255,0,0); rgb255(1cm)=(255,255,255); rgb255(2cm)=(0,255,0)},
+			    colorbar,
+			    mesh/ordering=x varies,
+			    mesh/cols=8,
+			    mesh/rows=10,
+			    xtick={1.5,2.5,3.5,4.5,5.5,6.5,7.5,8.5,9.5},
+    			xticklabels={$RG_1$, $RG_3$, $RG_{10}$, $RG_{50}$, $ARG_0$, $ARG_{0.01}$, $ARG_{0.05}$, $ARG_{0.1}$, $ARG_{0.2}$},
+    			x tick label style = {align = center, rotate = 50, anchor = north east},
+    			ytick = {1.5,2.5,3.5,4.5,5.5,6.5,7.5},
+    			yticklabels = {in-2004, eu-2005, cnr-2000, caidaRouterLevel, auto40, cond-mat-2003, as-22july06},
+    			colorbar style = {
+    				ytick = {0, 0.2, 0.4, 0.6, 0.8, 1},
+    				yticklabels = {$\le 0.96$, $0.968$, $0.976$, $0.984$, $0.992$, $1\ \cdot Q_{max}$}
+    			},
+			 ]
+			\addplot3[surf,shader=flat corner] table{../Text/data/arg/results/results1.csv};
+			\addplot3[no marks, black, dashed] coordinates {(5, 1, 1) (5, 8, 1)};
+			\end{axis}
+		\end{tikzpicture}
+	\end{figure}
 \end{frame}
